--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,50 +3,77 @@ updates:
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
       time: "08:00"
     labels:
       - "dependencies"
     commit-message:
       prefix: "chore"
       include: "scope"
+    groups:
+      prod-deps:
+        dependency-type: "production"
+      dev-deps:
+        dependency-type: "development"
   - package-ecosystem: "gomod"
     directory: "/dagger"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
       time: "08:00"
     labels:
       - "dependencies"
     commit-message:
       prefix: "chore"
       include: "scope"
+    groups:
+      prod-deps:
+        dependency-type: "production"
+      dev-deps:
+        dependency-type: "development"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
       time: "08:00"
     labels:
       - "dependencies"
     commit-message:
       prefix: "chore"
       include: "scope"
+    groups:
+      actions-deps:
+        patterns:
+          - "*"
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
       time: "08:00"
     labels:
       - "dependencies"
     commit-message:
       prefix: "chore"
       include: "scope"
+    groups:
+      docker-deps:
+        patterns:
+          - "*"
   - package-ecosystem: "pip"
     directory: "/www"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
       time: "08:00"
     labels:
       - "dependencies"
     commit-message:
       prefix: "chore"
       include: "scope"
+    groups:
+      docs-deps:
+        patterns:
+          - "*"
